--- a/index.html
+++ b/index.html
@@ -21,30 +21,34 @@
                 <h3>info@asia-holidays.com</h3>
             </div>
         </header>
+
         <main>
-            <section class="countries">
-                <div><img calss="country" src="india_photo.png" alt="India">
+            <section class="gallery">
+                <div class="country">
+                    <img calss="countrypic" src="india_photo.png" alt="India">
                     <h1>India</h1>
                 </div>
-                <div> <img calss="country" src="nepal_photo.png" alt="Nepal">
+                <div class="country">
+                    <img calss="countrypic" src="nepal_photo.png" alt="Nepal">
                     <h1>Nepal</h1>
                 </div>
-                <div><img calss="country" src="tibet_photo.png" alt="Tibet">
+                <div class="country"><img calss="countrypic" src="tibet_photo.png" alt="Tibet">
                     <h1>Tibet</h1>
                 </div>
             </section>
-            <section class="countries">
-                <div><img calss="country" src="bhutan_photo.png" alt="Bhutan">
+            <section class="gallery">
+                <div class="country"><img calss="countrypic" src="bhutan_photo.png" alt="Bhutan">
                     <h1>Bhutan</h1>
                 </div>
-                <div><img calss="country" src="sri-lanka photo.png" alt="Sri Lanka">
+                <div class="country"><img calss="countrypic" src="sri-lanka photo.png" alt="Sri Lanka">
                     <h1>Sri Lanka</h1>
                 </div>
-                <div><img calss="country" src="maldives_photo.png" alt="Maldives">
+                <div class="country"><img calss="countrypic" src="maldives_photo.png" alt="Maldives">
                     <h1>Maldives</h1>
                 </div>
             </section>
         </main>
+
         <footer>
             <div>
                 <h2>Copyright (c) asia-holidays.com. 2010</h2>
