border and trying to make shadow

--- a/index.html
+++ b/index.html
@@ -25,25 +25,29 @@
         <main>
             <section class="gallery">
                 <div class="country">
-                    <img calss="countrypic" src="india_photo.png" alt="India">
+                    <div class="image"><img calss="countrypic" src="india_photo.png" alt="India"></div>
                     <h1>India</h1>
                 </div>
                 <div class="country">
-                    <img calss="countrypic" src="nepal_photo.png" alt="Nepal">
+                    <div class="image"><img calss="countrypic" src="nepal_photo.png" alt="Nepal"></div>
                     <h1>Nepal</h1>
                 </div>
-                <div class="country"><img calss="countrypic" src="tibet_photo.png" alt="Tibet">
+                <div class="country">
+                    <div class="image"><img calss="countrypic" src="tibet_photo.png" alt="Tibet"></div>
                     <h1>Tibet</h1>
                 </div>
             </section>
             <section class="gallery">
-                <div class="country"><img calss="countrypic" src="bhutan_photo.png" alt="Bhutan">
+                <div class="country">
+                    <div class="image"><img calss="countrypic" src="bhutan_photo.png" alt="Bhutan"></div>
                     <h1>Bhutan</h1>
                 </div>
-                <div class="country"><img calss="countrypic" src="sri-lanka photo.png" alt="Sri Lanka">
+                <div class="country">
+                    <div class="image"><img calss="countrypic" src="sri-lanka photo.png" alt="Sri Lanka"></div>
                     <h1>Sri Lanka</h1>
                 </div>
-                <div class="country"><img calss="countrypic" src="maldives_photo.png" alt="Maldives">
+                <div class="country">
+                    <div class="image"><img calss="countrypic" src="maldives_photo.png" alt="Maldives"></div>
                     <h1>Maldives</h1>
                 </div>
             </section>
